--- a/templates/settings.html
+++ b/templates/settings.html
@@ -47,15 +47,15 @@
                         <img src="{{ url_for('static', filename='images/chatboticon.png') }}" alt="Icon 1">
                     </label>
                     <label for="icon2">
-                        <input type="radio" id="icon2" name="widget_icon" value="chatbot1" {% if settings['widget_icon'] == 'chatbot1' %}checked{% endif %}>
+                        <input type="radio" id="icon2" name="widget_icon" value="chatbot2" {% if settings['widget_icon'] == 'chatbot1' %}checked{% endif %}>
                         <img src="{{ url_for('static', filename='images/chatbot2.png') }}" alt="Icon 2">
                     </label>
                     <label for="icon3">
-                        <input type="radio" id="icon3" name="widget_icon" value="chatbot2" {% if settings['widget_icon'] == 'chatbot2' %}checked{% endif %}>
+                        <input type="radio" id="icon3" name="widget_icon" value="chatbot3" {% if settings['widget_icon'] == 'chatbot2' %}checked{% endif %}>
                         <img src="{{ url_for('static', filename='images/chatbot3.png') }}" alt="Icon 3">
                     </label>
                     <label for="icon4">
-                        <input type="radio" id="icon4" name="widget_icon" value="chatbot3" {% if settings['widget_icon'] == 'chatbot3' %}checked{% endif %}>
+                        <input type="radio" id="icon4" name="widget_icon" value="chatbot4" {% if settings['widget_icon'] == 'chatbot3' %}checked{% endif %}>
                         <img src="{{ url_for('static', filename='images/chatbot4.png') }}" alt="Icon 4">
                     </label>
                 </div><br><br>
@@ -94,7 +94,7 @@
                 <div class="chatbox-header">
                     <span class="chatbox-title">
                         <div class="chatbox-icon">
-                            <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
+                            <img src="{{ url_for('static', filename='images/IU bball logo.jpeg') }}" alt="Virtual assistant" width="150" height="150">
                         </div>
                         <div class="chatbox-top">Virtual assistant</div> 
                     </span>
