--- a/templates/admin.html
+++ b/templates/admin.html
@@ -60,7 +60,7 @@
                                 <div id="filelist">
                                     <div id="fileitem">
                                         <div id="fileinfo">
-                                            <img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon">
+                                            <img src="{{ url_for('static', filename='images/IU bball logo.jpeg') }}" height="30" width="30" alt="PDF-icon">
                                             <div id="filename"></div>
                                             <div id="filesize"></div>
                                             <div  class="left"><img src="{{ url_for('static', filename='images/X-icon.png') }}" height="20" width="20" alt="X-icon"></div>
@@ -138,7 +138,7 @@
                     <div class="chatbox-header">
                         <span class="chatbox-title">
                             <div class="chatbox-icon">
-                                <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
+                                <img src="{{ url_for('static', filename='images/IU bball logo.jpeg') }}" alt="Virtual assistant" width="150" height="150">
                             </div>
                             <div class="chatbox-top">Virtual Assistant</div> 
                         </span>
