fixed internal error

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -94,7 +94,7 @@
                 <div class="chatbox-header">
                     <span class="chatbox-title">
                         <div class="chatbox-icon">
-                            <img src="{{ url_for('static', filename='images/beber camp.png'') }}" alt="Virtual assistant" width="150" height="150">
+                            <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
                         </div>
                         <div class="chatbox-top">Virtual assistant</div> 
                     </span>
