--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <title>Chatbot Widget</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/settings.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
@@ -88,47 +87,45 @@
         </form>
     </div>
 
-    <div class="widget">
-        <div class="chatbot" id="chatbot">
-            <div class="chatbox">
-                <div class="chatbox-header">
-                    <span class="chatbox-title">
-                        <div class="chatbox-icon">
-                            <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
-                        </div>
-                        <div class="chatbox-top">Virtual assistant</div> 
-                    </span>
-                    <div class="chatbox-close">
-                        <div id="refresh">
-                            <img src="{{ url_for('static', filename='images/refresh.png') }}" alt="Refresh" width="20" height="20">
-                        </div>
-                    </div>
-                </div>
-                <div class="chatbox-body" >
-                    <!-- Chat messages go here -->
-                </div>
-                <div class="chatbox-input">
-                    <div class="input-wrapper">
-                        <input type="text" id="user-input" placeholder="Ask a question...">
-                        <button id="send-button">Send</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <img id="chatbot-button" src="http://127.0.0.1:5000/static/images/{{ settings.widget_icon }}.png" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;">
+
+    <iframe src="http://127.0.0.1:5000/{{ user_id }}" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"></iframe>
     <script>
-        function validateInput(input) {
-          if (input.value < 0) input.value = 0;
-          if (input.value > 1) input.value = 1;
+        var chatbotButton = document.getElementById('chatbot-button');
+        chatbotButton.addEventListener('mouseover', function() {
+            this.style.transform = 'scale(1.1)';
+        });
+        chatbotButton.addEventListener('mouseout', function() {
+            this.style.transform = 'scale(1)';
+        });
+        document.getElementById('chatbot-button').addEventListener('click', function() {
+            var iframe = document.getElementById('chatbot-iframe');
+            if (iframe.style.display === 'none') {
+                iframe.style.display = 'block';
+                // Add the event listener when the chatbot is opened
+                document.addEventListener('click', closeChatbotOnClickOutside);
+            } else {
+                iframe.style.display = 'none';
+                // Remove the event listener when the chatbot is closed
+                document.removeEventListener('click', closeChatbotOnClickOutside);
+            }
+        });
+
+        function closeChatbotOnClickOutside(event) {
+            var chatbot = document.getElementById("chatbot-iframe");
+            // Check if the click was outside the chatbot
+            if (event.target.id !== 'chatbot-iframe' && event.target.id !== 'chatbot-button') {
+                closeChatbot();
+            }
         }
-        </script>
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+
+        function closeChatbot() {
+            var iframe = document.getElementById('chatbot-iframe');
+            iframe.style.display = 'none';
+            // Remove the event listener when the chatbot is closed
+            document.removeEventListener('click', closeChatbotOnClickOutside);
+        }
+    </script>   
     <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
-    <style>
-        :root {
-          --background-color: {{ settings.background_color }};
-          --font-family: {{ settings.font_style }}, sans-serif;
-        }
-        </style>
 </body>
 </html>
