--- a/static/css/index.css
+++ b/static/css/index.css
@@ -41,7 +41,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
-            background-color: #ffffff;
+            background-color: var(--border-color);
             color: rgb(0, 0, 0);
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
@@ -129,12 +129,13 @@
         }
         .chatbox-top {
             flex-grow: 1;
-            padding: 10px;
             width: 20;
             height: 20;
             overflow-y: scroll;
-            background-color: #ffffff;
-            font-family: 'Oswald', sans-serif
+            background-color: var(--border-color);
+            font-family: var(--font-family);
+            align-items: center;
+            color: var(--title-color);
         }
 
         .chatbox-input button {
@@ -215,7 +216,7 @@
             height: 10px;
             margin: 2px;
             border-radius: 50%;
-            background-color: #e65b5b;
+            background-color: var(--dot-color);
             animation: typing 1s ease-in-out infinite;
         }
 
