--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
                 <div class="chatbox-header">
                     <span class="chatbox-title">
                         <div class="chatbox-icon">
-                            <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
+                            <img src="{{ settings.logo }}" alt="Virtual assistant" width="150" height="150">
                         </div>
-                        <div class="chatbox-top">Virtual Assistant</div> 
+                        <div class="chatbox-top">{{ settings.chatbot_title }}</div> 
                     </span>
                     <div class="chatbox-close">
                         <div id="refresh">
@@ -46,6 +46,10 @@
     :root {
         --background-color: {{ settings.background_color }};
         --font-family: {{ settings.font_style }};
+        --dot-color: {{ settings.dot_color }};
+        --title-color: {{ settings.title_color }};
+        --border-color: {{ settings.border_color }};
+
     }
     </style>
 </html>
