added info button in settings page

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -11,7 +11,7 @@
 
 .company-name {
   margin-right: 10px;
-  font-family: Arial, sans-serif; /* Change this to your preferred font */
+  font-family: Arial, sans-serif; 
   font-weight: bold;
   font-style: italic;
 }
