--- a/templates/settings.html
+++ b/templates/settings.html
@@ -35,8 +35,13 @@
     <div id="settings-box">
         
         <form id="settingsForm" action="/update_chatbot_settings" method="post" style="width: 2000px; height: 2000px;">
-            <h2 class="instructions">Chatbot Settings</h2>
-             <p class="instructions">Change the settings and your system preferences below then click the save button:</p>
+            <div class="info-bundle">
+                <h2 class="instructions"><b>Chatbot Settings</b></h2>
+                <div class="tooltip-container">
+                    <img src="{{ url_for('static', filename='images/info-button.png') }}" alt="Info" class="info-button">
+                    <div class="tooltip-text">Change the settings and your system preferences below then click the save button:</div>
+                </div>   
+            </div>         
             <div class="settings-section">
                 <h3>Styling</h3>
                 <label>Widget Icon:</label><br>
