Add email functionality and password reset feature

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,8 @@
   </div>
 
   <form method="post">
-    <label for="username">Username</label>
-    <input type="text" id="username" name="username">
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email">
     
     <label for="password">Password</label>
     <input type="password" id="password" name="password">
