--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,8 @@
     <form method="POST">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br>
         <input type="submit" value="Sign Up">
