--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,39 @@
 html, body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+}
+
+.main-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.form-container {
+  padding: 20% 5%; /* top, right, bottom, left */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.company-logo {
+  height: 150px; /* Adjust as needed */
+  width: 50%; /* Keep the aspect ratio */
+  margin-bottom: 20px; /* Space between the logo and the form */
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 
 .top-ribbon {
@@ -9,62 +42,63 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  width: 100%;
   padding-right: 20px;
   color: white;
   font-size: 40px;
 }
 
-.company-name {
-  margin-right: 10px;
-  font-family: Arial, sans-serif; /* Change this to your preferred font */
-  font-weight: bold;
-  font-style: italic;
+.company-logo {
+  height: 80px; /* Adjust as needed */
+  width: auto; /* Keep the aspect ratio */
 }
 
-
 body {
-    background-color: #f2f2f2;
-    font-family: Arial, sans-serif;
-  }
-  
-  form {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    width: 400px;
-    margin: 50px auto;
-    padding-right: 30px;
-  }
-  
-  label {
-    display: block;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  input[type="text"], input[type="password"] {
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    width: 100%;
-    margin-bottom: 20px;
-    margin-right: 10px;
-  }
-  
-  button[type="submit"] {
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 10px 20px;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #3e8e41;
-  }
+  background-color: #ffffff;
+  font-family: Arial, sans-serif;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  width: 100%;
+  max-width: 500px; /* Set a maximum width */
+  margin: 50px auto;
+}
+
+label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+input[type="text"], input[type="password"] {
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  width: 100%;
+  max-width: 95%; /* Set a maximum width */
+  margin-bottom: 20px;
+}
+
+button[type="submit"] {
+  width: 40%; /* Set the width */
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 20px;
+}
+
+button[type="submit"]:hover {
+  background-color: #3e8e41;
+}
