--- a/templates/login.html
+++ b/templates/login.html
@@ -5,19 +5,24 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
 <body>
-  <div class="top-ribbon">
-    <span class="company-name">EccoAI</span>
+  <div class="main-content">
+    <div class="form-container">
+      <img class="company-logo" src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="EccoAI">
+      <form method="post">
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email">
+        
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+        <a href="{{ url_for('forgot_password') }}">Forgot Password</a><br>
+
+        <button type="submit">Login</button>
+      </form>
+    </div>
+
+    <div class="image-container">
+      <img src="{{ url_for('static', filename='images/zebrastripes.png') }}">
+    </div>
   </div>
-
-  <form method="post">
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email">
-    
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password">
-    
-    <button type="submit">Login</button>
-  </form>
-
 </body>
 </html>
