--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,6 +12,8 @@
         <input type="email" id="email" name="email" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br>
+        <label for="code">Verification Code:</label><br>
+        <input type="text" id="code" name="code" required><br>
         <input type="submit" value="Sign Up">
     </form>
 </body>
