--- a/static/css/integrations.css
+++ b/static/css/integrations.css
@@ -141,12 +141,15 @@ html, body {
   }
 
 .code-container {
-    position: relative;
-    padding: 10px;
-    margin: 15px 0;
-    overflow-x: auto;
-    margin-left: 100px;
-    margin-right: 15px;
+  position: relative;
+  padding: 10px;
+  margin: 15px 0;
+  overflow-x: auto;
+  overflow-y: auto; /* Add vertical scroll */
+  max-height: 600px; /* Increase the height to 600px */
+  margin-left: 100px;
+  margin-right: 15px;
+  border-radius: 10px; /* Add rounded edges */
 }
 
 .copy-btn {
