--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -29,6 +29,10 @@
     </section>
     <h2 class="instructions">Popup Chat</h2>
     <p class="instructions">Copy and paste this code before the &lt;/body&gt; tag on your website:</p>
+    <ul class="instructions">
+        <li>Some text</li>
+        <li>Some other text</li>
+    </ul>
     <div class="code-container">
         <pre><code id="chatbot-code">
         &lt;img id="chatbot-button" src="https://hr-bot-beast-aa887886e420.herokuapp.com{{ url_for('static', filename='images/' + settings['widget_icon'] + '.png') }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
