--- a/templates/login.html
+++ b/templates/login.html
@@ -3,21 +3,44 @@
 <head>
   <title>Login</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+  <style>
+    .flash-message {
+      color: #FF0000; /* Change color as needed */
+      font-size: 1em; /* Change font size as needed */
+      transition: opacity 0.5s; /* Change transition speed as needed */
+      text-align: center; /* Center the text */
+      margin-top: 20px; /* Add some space above the message */
+    }
+  </style>
+  <script>
+    setTimeout(function() {
+      var msg = document.getElementById('flash-msg');
+      msg.style.opacity = "0";
+    }, 12000); /* Change time as needed */
+  </script>
 </head>
 <body>
   <div class="main-content">
     <img class="company-logo" src="{{ url_for('static', filename='images/Ecco_logo.jpeg') }}" alt="EccoAI">
     <div class="form-container">
+      <img class="company-logo" src="{{ url_for('static', filename='images/logo.png') }}" alt="EccoAI">
       <form method="post">
         <label for="email">Email</label>
-        <input type="text" id="email" name="email">
+        <input type="text" id="email" name="email" required>
         
         <label for="password">Password</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" required>
         <a href="{{ url_for('forgot_password') }}">Forgot Password</a><br>
 
         <button type="submit">Login</button>
       </form>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div id="flash-msg" class="flash-message">{{ message }}</div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
     </div>
 
     <div class="image-container">
