--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,14 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
     <title>Reset Password</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reset_password.css') }}">
+    <style>
+        .flash-message {
+            color: #FF0000; /* Change color as needed */
+            font-size: 1em; /* Change font size as needed */
+            transition: opacity 0.5s; /* Change transition speed as needed */
+            text-align: center; /* Center the text */
+            margin-top: 20px; /* Add some space above the message */
+        }
+    </style>
+    <script>
+        setTimeout(function() {
+            var msg = document.getElementById('flash-msg');
+            msg.style.opacity = "0";
+        }, 12000); /* Change time as needed */
+    </script>
 </head>
 <body>
-    <h2>Reset Password</h2>
-    <form method="POST">
-        <label for="password">New Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
-        <input type="submit" value="Update Password">
-    </form>
+    <div class="main-content">
+        <div class="form-container">
+            <img class="company-logo" src="{{ url_for('static', filename='images/logo.png') }}" alt="EccoAI">
+            <form method="post">
+                <label for="password">New Password</label>
+                <input type="password" id="password" name="password" required>
+
+                <label for="confirm_password">Confirm Password</label>
+                <input type="password" id="confirm_password" name="confirm_password" required>
+
+                <button type="submit">Update Password</button>
+            </form>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div id="flash-msg" class="flash-message">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </div>
+
+        <div class="image-container">
+            <img src="{{ url_for('static', filename='images/zebrastripes.png') }}">
+        </div>
+    </div>
 </body>
 </html>
