Fix data variable initialization in analytics function and update Flask-Mail version

--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -30,8 +30,8 @@
     <h2 class="instructions">Popup Chat</h2>
     <p class="instructions">Copy and paste this code before the &lt;/body&gt; tag on your website:</p>
     <ul class="instructions">
-        <li>Some text</li>
-        <li>Some other text</li>
+        <li>To learn more about embedding this code onto your Webflow site, click the link <a href="https://university.webflow.com/lesson/custom-code-in-the-head-and-body-tags?topics=site-settings" target="_blank">here</a>.</li>
+        <li>To learn more about embedding this code onto your Wordpress site, click the link <a href="https://wordpress.com/support/code/" target="_blank">here</a>.</li>
     </ul>
     <div class="code-container">
         <pre><code id="chatbot-code">
