--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -34,7 +34,7 @@ html, body {
   
   .image-container img {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
   }
   
